--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <title>NoSQL Registration System</title>
 </head>
 <body>
-    <span id="login">login</span> <span id="register">register</span>
-    <div id="container"></div>
+    
+    <div id="container">
+        <h3>login</h3>
+        <form action="">
+            <input type="text" id="nick1" required placeholder="nickname">
+            <input type="password" id="password1" required placeholder="password">
+            <button type="submit" id="login-button">login</button>
+        </form>`
+        <h3>register</h3>
+        <form action="">
+            <input type="text" id="nick2" required placeholder="nickname">
+            <input type="password" id="password2" required placeholder="password">
+            <button type="submit" id="register-button">register</button>
+        </form>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
